force-app/main/default/objects/CampaignMember/fields/Campaign_Level__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Campaign Level for this Member, if applicable (for incentive Campaigns only).</description>
    <inlineHelpText>Current Campaign Level for this Member, if applicable (for incentive Campaigns only).</inlineHelpText>
    <label>Campaign Level</label>
    <referenceTo>Campaign_Level__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>