force-app/main/default/objects/CampaignMember/fields/Eligible_Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Donation_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total count of successful (completed donations) visits for a Donor since he / she joined the Campaign, until the Campaign End Date. This is set automatically by code, based on Status = Complete and Outcome = Donation visits for the Campaign Member Contact.</description>
    <inlineHelpText>The total count of successful (completed donations) visits for a Donor since he / she joined the Campaign, until the Campaign End Date.</inlineHelpText>
    <label>Eligible Donation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>