force-app/main/default/objects/CampaignMember/fields/Incentive_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this Campaign Member is eligible for incentives in this Campaign. For Incentive Type Campaigns only. Defaults to checked (true).</description>
    <inlineHelpText>Indicates whether this Campaign Member is eligible for incentives in this Campaign.</inlineHelpText>
    <label>Incentive Eligible?</label>
    <type>Checkbox</type>
</CustomField>