force-app/main/default/objects/CampaignMember/fields/Last_Related_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Related_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The last related visit to this Campaign Member, which last incremented the counter for this membership, if applicable.</description>
    <inlineHelpText>The last related visit to this Campaign Member, which last incremented the counter for this membership, if applicable.</inlineHelpText>
    <label>Last Related Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>