force-app/main/default/objects/CampaignMember/fields/Referring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who referred this Campaign Member.</description>
    <inlineHelpText>The person who referred this Campaign Member.</inlineHelpText>
    <label>Referring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Campaign Members</relationshipLabel>
    <relationshipName>Referring_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>