force-app/main/default/objects/CampaignMember/fields/Starting_Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>Starting_Donation_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter this only for use to allow a Campaign Member to start at a higher level. This will affect how the Member is placed into Campaign Levels.</description>
    <inlineHelpText>Enter this only for use to allow a Campaign Member to start at a higher level. This will affect how the Member is placed into Campaign Levels.</inlineHelpText>
    <label>Starting Donation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>