force-app/main/default/objects/CampaignMember/fields/Total_Eligible_Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Eligible_Donation_Count__c</fullName>
    <description>This is set automatically as a calculation of the starting eligible amount plus the counts automatically computed for a donor from Starting Donation Count plus Eligible Donation Count.</description>
    <inlineHelpText>This is set automatically as a calculation of the starting eligible amount plus the counts automatically computed for a donor from Starting Donation Count plus Eligible Donation Count.</inlineHelpText>
    <label>Total Eligible Donation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>